Alternative seq and uniprot search

--- a/pit_app/templates/layoutGenoverse.html
+++ b/pit_app/templates/layoutGenoverse.html
@@ -220,7 +220,7 @@
         }),
         Genoverse.Track.extend({
           name   : 'Genes',
-          height : 200,
+          autoHeight : true,
           info   : 'Ensembl API genes & transcripts, see <a href="http://beta.rest.ensembl.org/" target="_blank">beta.rest.ensembl.org</a> for more details',
 
           // Different settings for different zoom level
