--- a/pit_app/templates/results/experiment.html
+++ b/pit_app/templates/results/experiment.html
@@ -11,6 +11,7 @@
         <li><a href="#expGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
         <li><a href="#expBreakdown"><i class="fa fa-table fa-fw"></i> Experiment breakdown</a></li>
         <li><a href="#tgeBreakdown"><i class="fa fa-table fa-fw"></i> TGE breakdown</a></li>
+        <li><a href="#transcriptBreakdown"><i class="fa fa-table fa-fw"></i> Transcript breakdown</a></li>
       </ul>
     </div>
   </div>
@@ -47,7 +48,7 @@
         
         <div class="panel-body">
           <div class="row" style="margin-left:5px">
-            {% if summary.accession == 'PIT000001' %}
+            <!-- {% if summary.accession == 'PIT000001' %}
               <p>Data from a human ovarian cancer experiment. The whole transcriptome was sequenced for this experiment. Mass-spectrometry was carried out only on the extra cellular matrix. Tissues from different stage, grade have been used for this experiment to find underlying mechanism of drug response.</p><br/>
               <p>Funded by: European Research Council (ERC322566); the Cancer Research UK (A16354)</p><br/>
               <p style='font-size: 11px; font-style: italic;'>* Deconstructing a Metastatic Human Tumor Microenvironment. O.M.T. Pearce, R. Delaine-Smith, E. Maniati, S. Nichols, J. Wang, S. Böhm, V. Rajeeve, D. Ullah, P. Chakravarty, R.R. Jones, A. Monfort, T. Dowe, J. Connelly, J.D. Brenton, C. Chelala, P. R. Cutillas, M. Lockley, C. Bessant, M. Knight, F.R. Balkwill (submitted to Nature)</p>
@@ -67,7 +68,9 @@
               <p>Data from mouse fibroblast (L929) cells exposed to Nelson Bay orthoreovirus (NBV).</p><br/>
               <p>Funded by: BBSRC (BB/M02542X/1); Australian Research Council (CE11001007); University of Melbourne; CSIRO.</p><br/>
               <p style='font-size: 11px; font-style: italic;'>* Cell tropism of Nelson Bay Orthoreovirus is Influenced by the Type 1 I IFN Signalling Pathway.  L. Mok, J.W. Wynne, M. Tachedjian, B. Shiell, K. Ford , D.A. Matthews, A. Bacic, W.P. Michalskia (submitted to Journal of Virology)</p>
-            {% endif %}
+            {% endif %} -->
+            <p>{{ summary.description }}</p>
+            <p>{{ summary.publication }}</p>
           </div>
         </div>
       </div>
@@ -109,7 +112,7 @@
               {% for sample in sampleList %}
                 <tr>
                   <!-- <td>{{ sample.id }}</td> -->
-                  <td>{{ sample.name }}</td>
+                  <td><a href="sample?sample={{ sample.name }}&experiment={{summary.accession}}">{{ sample.name }}</td>
                   <td>{{ sample.tgeNum }}</td>
                   <td>{{ sample.pepNum }}</td>
                 </tr>
@@ -127,6 +130,8 @@
         </div>
         
         <div class="panel-body">
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#exptgeModal"><i class="fa fa-download"></i>&nbsp;Download TGEs</button>
+            <br/><br/>
           <table class="table table-striped table-bordered dataTable no-footer" id="exptgeTable" style="display: none;">
           <thead>
             <tr>
@@ -167,7 +172,163 @@
         </table>
       </div>
     </div>
+        <div class="panel panel-default" id="transcriptBreakdown">
+        <div class="panel-heading">
+          <i class="fa fa-table fa-fw"></i> Transcripts
+          <a class="btn pull-right popoverData" data-content="List of experimentally TGEs that have been observed in this experiment." rel="popover" data-placement="left" data-original-title="Translated genomic elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+        </div>
+        
+        <div class="panel-body">
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#transModal"><i class="fa fa-download"></i>&nbsp;Download Transcripts</button>
+            <br/><br/>
+          <table class="table table-striped table-bordered dataTable no-footer" id="exptrnTable"> <!--style="display: none;-->
+          <thead>
+            <tr>
+              <th>Transcript Accession&nbsp;<a class="popoverData" data-content="Unique identifier of a transcript in the PITDB database." rel="popover" data-placement="bottom" data-original-title="TGE Accession" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+              <th>TGE Accession&nbsp;<a class="popoverData" data-content="Unique identifier of a TGE in the PITDB database." rel="popover" data-placement="bottom" data-original-title="TGE Accession" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+              <th>Gene(s)&nbsp;<a class="popoverData" data-content="One transcript may belong to multiple genes, as it may belong to different species." rel="popover" data-placement="bottom" data-original-title="Gene (s)" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+              <th>Samples&nbsp;<a class="popoverData" data-content="Accession number of homologous Uniprot protein (if there is one). Click the accession number to see what else the database knows about this protein." rel="popover" data-placement="bottom" data-original-title="Uniprot ID(s)" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for trn in trns %}
+              <tr>
+                <td><a href="transcript?obsID={{ trn.obsid }}&accession={{ trn.tge_id }}">{{ trn.tid }}</a></td>
+                <td>
+                {% for tgeAcc in trn.tge_acc.split(',') %}
+                {% if tgeAcc != '-' %}
+                    <a href="tge?accession={{ tgeAcc }}">{{ tgeAcc }}</a>
+                {% else %}
+                    <span style="font-size:18px">{{ tgeAcc }}</span>
+                {% endif %}{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                </td>
+                <td>
+                {% for g in trn.genes.split(',') %}
+                {% if g != '-' %}
+                    <a href="gene?gene={{ g }}">{{ g }}</a>
+                {% else %}
+                    <span style="font-size:18px">{{ g }}</span>
+                {% endif %}{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                </td>
+                <td>
+                {% for samp in trn.sample_acc.split(',') %}
+                {% if samp != '-' %}
+                    <a href="sample?accession={{ samp }}&experiment={{ trn.sample_exp }}">{{ samp }}</a>
+                {% else %}
+                    <span style="font-size:18px">{{ g }}</span>
+                {% endif %}{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Modal -->
+<div id="exptgeModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content" style="padding-left: 10px">
+      <div class="modal-header">
+        <button type="button" class="close btn" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Download TGEs</h4>
+      </div>
+      <form role="form" id="downloadForm" name="downloadForm" action="/download" method="POST">
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-12">
+              <input type="hidden" id="experimentTge" name="experimentTge" value='{{ summary.accession }}'>
+              <fieldset>
+                <h5>Select the fields to include in the download file:</h5><br/>
+                <div class="checkbox checkbox-primary">
+                  <input id="tgeAcc" type="checkbox" name="check" value="tgeAcc" checked="">
+                  <label for="tgeAcc">TGE Accession</label>
+                </div>
+                <div class="checkbox checkbox-primary">
+                  <input id="tgeType" type="checkbox" name="check" value="tgeType" checked="">
+                  <label for="tgeType">TGE Type</label>
+                  {% for class in tgeClasses %}
+                  <div class="checkbox checkbox-primary nested">
+                    <input id='{{ class }}' type="checkbox" class="check_nested" name="check_nested" value='{{ class }}' checked="">
+                    <label for='{{ class }}'>{{ class }}</label>
+                  </div>
+                  {% endfor %}
+                </div>
+                <div class="checkbox checkbox-primary">
+                  <input id="protName" type="checkbox" name="check" value="protName" checked="">
+                  <label for="protName">Protein Name</label>
+                </div>
+                <div class="checkbox checkbox-primary">
+                  <input id="aminoSeq" type="checkbox" name="check" value="aminoSeq" checked="">
+                  <label for="aminoSeq">Amino Acid Sequence</label>
+                </div>
+                <br/>
+                <h5>Select the file type:</h5>
+                <label class="radio-inline"><input type="radio" name="fileType" value="fasta" checked>Fasta</label>
+                <label class="radio-inline"><input type="radio" name="fileType" value="csv">CSV</label>
+                <br/>
+                <span class="modalWarning" style="color: #c12e2a; font-weight: bold"></span>
+              </fieldset>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="submitSearch" type="submit" class="btn btn-info btn-lg">Submit</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </form>
+
   </div>
 </div>
 
+<div id="transModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content" style="padding-left: 10px">
+      <div class="modal-header">
+        <button type="button" class="close btn" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Download Transcript</h4>
+      </div>
+      <form role="form" id="downloadForm" action="/downloadTranscript" method="POST">
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-12">
+              <input type="hidden" id="experimentTrans" name="experimentTrans" value='{{ summary.accession }}'>
+              <fieldset>
+                <h5>Select the fields to include in the download file:</h5><br/>
+                <div class="checkbox checkbox-primary">
+                  <input id="transId" type="checkbox" name="check" value="transId" checked="">
+                  <label for="tranId">Transcript ID</label>
+                </div>
+                <div class="checkbox checkbox-primary">
+                  <input id="geneName" type="checkbox" name="check" value="geneName" checked="">
+                  <label for="geneName">Gene Name</label>
+                </div>
+                <div class="checkbox checkbox-primary">
+                  <input id="transSeq" type="checkbox" name="check" value="transSeq" checked="">
+                  <label for="transSeq">Transcript Sequence</label>
+                </div>
+                <br/>
+                <h5>Select the file type:</h5>
+                <label class="radio-inline"><input type="radio" name="fileType" value="fasta" checked>Fasta</label>
+                <label class="radio-inline"><input type="radio" name="fileType" value="csv">CSV</label>
+                <br/>
+                <span class="modalWarning" style="color: #c12e2a; font-weight: bold"></span>
+              </fieldset>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="submitSearch" type="submit" class="btn btn-info btn-lg">Submit</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </form>
+
+  </div>
+</div>
 {% endblock %}
