--- a/pit_app/templates/layout.html
+++ b/pit_app/templates/layout.html
@@ -26,7 +26,7 @@
 
   <body>
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-      <div class="container topnav" style="overflow-y: auto">
+      <div class="container topnav">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
@@ -42,8 +42,6 @@
           <ul class="nav navbar-nav navbar-right" style="font-weight: bold; font-size: 15.5px">
             <li><a href="/#about">About</a></li>
             <li><a data-toggle="modal" data-target="#help" style="cursor: pointer;">Help</a></li>
-            <li><a href="browse?accession='all'">Browse</a></li>
-            
             <li><a data-toggle="modal" data-target="#search" style="cursor: pointer;">Search <i class="fa fa-search fa-fw"></i></a></li>
           </ul>
         </div>
@@ -64,11 +62,10 @@
           <form id="searchform" class="form-horizontal" role="form" action="/search" method="POST">
             <div class="modal-body" style="font-weight: normal; line-height: 1.6em;">
               <div class="form-group">
-                <p>Six main types of search are available:
+                <p>Five main types of search are available:
                 <ul> 
                   <li><label>TGE:</label> Find PIT evidence for a specific translated genomic element (TGE) by searching for its accession number or amino acid sequence.</li>
                   <li><label>Experiment:</label> View summary information for a particular experiment ID.</li>
-                  <li><label>Sample:</label> View summary information for a particular sample ID or name.</li>
                   <li><label>Protein:</label> Find TGEs corresponding to a specific protein, identified by its Uniprot ID.</li>
                   <li><label>Gene:</label> Search by gene symbol to find TGEs that are products of that gene.</li>
                   <li><label>Species:</label> Find all TGEs observed for a particular species, selected from the drop down list.</li>
@@ -87,10 +84,6 @@
                   <option disabled role="separator" class="divider"></li>
                   <optgroup label="Experiment">
                     <option>Experiment ID</option>
-                  </optgroup>
-                  <optgroup label="Sample">
-                    <option>Sample ID</option>
-                    <option>Sample Name</option>
                   </optgroup>
                   <option disabled role="separator" class="divider"></li>
                   <optgroup label="Protein">
@@ -148,8 +141,8 @@
           <h5>How do I browse PITDB?</h5>
           <p>The web interface allows you to browse information in PITDB via four simple searches:</p>
           <ul>
-            <li>Search by <strong>TGE</strong> to find PIT evidence for a specific translated genomic element (TGE) by searching for its accession number (e.g. TGE0001234) or amino acid sequence. Each TGE is supported by one or more TGE observations, comprising a transcript from RNA-seq and peptide evidence of translation of the transcript from mass spectrometry. Each TGE is also assigned a type (e.g. novel isoform) through comparison with reference databases. A single TGE (as defined by its unique sequence) may have been observed across multiple species.</li>
-            <li>Search by <strong>experiment</strong> (e.g. EXP000001) to view summary information for a particular experiment that has been submitted to PITDB. An experiment may contain one or more samples. The summary information includes information about the number of TGEs identified, the distribution of these among the samples, and a brief description of the experiment.</li>
+            <li>Search by <strong>TGE</strong> to find PIT evidence for a specific translated genomic element (TGE) by searching for its accession number (e.g. TGE001234) or amino acid sequence. Each TGE is supported by one or more TGE observations, comprising a transcript from RNA-seq and peptide evidence of translation of the transcript from mass spectrometry. Each TGE is also assigned a type (e.g. novel isoform) through comparison with reference databases. A single TGE (as defined by its unique sequence) may have been observed across multiple species.</li>
+            <li>Search by <strong>experiment</strong> (e.g. PIT000001) to view summary information for a particular experiment that has been submitted to PITDB. An experiment may contain one or more samples. The summary information includes information about the number of TGEs identified, the distribution of these among the samples, and a brief description of the experiment.</li>
             <li>Search by <strong>protein</strong> to find TGEs corresponding to a specific protein, identified by its Uniprot ID (e.g. P12111). This shows any TGEs corresponding to the protein and is useful in seeking experimental evidence for a theoretical protein, or investigating isoforms of known proteins. For species with a genome assembly, TGEs are shown in their genomic context alongside their corresponding genes.</li>
             <li>Search by <strong>species</strong> to find all TGEs observed for a particular species. For non-model organisms this essentially provides a draft proteome for further analysis. However, it is important to note that the completeness of the proteome will depend on the diversity of sample analysed, e.g. whether they came from multiple tissues.</li>
           </ul>In all the database views, specific TGEs can be located using the search box just above the TGE table.
