Removing data folders

--- a/pit_app/templates/home/index.html
+++ b/pit_app/templates/home/index.html
@@ -23,7 +23,7 @@
         <h2 class="section-heading">About PITDB</h2>
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
-        <p class="lead">PITDB is a publicly available database for sharing of results from PIT (proteomics informed by transcriptomics) experiments. PIT [<a href="#ref1">1</a>] involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome. Observed translated genomic elements (TGEs) are BLASTed against reference proteomes using a published workflow [<a href="#ref2">2</a>] to determine whether they are known proteins, protein variants or novel gene products. </p>
+        <p class="lead">PITDB [<a href="#ref1">1</a>] is a publicly available database for sharing of results from PIT (proteomics informed by transcriptomics) experiments. PIT [<a href="#ref2">2</a>] involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome. Observed translated genomic elements (TGEs) are BLASTed against reference proteomes using a published workflow [<a href="#ref3">3</a>] to determine whether they are known proteins, protein variants or novel gene products. </p>
 
         <h2 class="section-heading" style="padding-top: 30px">Database Statistics</h2>
         <hr class="section-heading-spacer" style="width: 280px">
@@ -78,9 +78,12 @@
         <hr class="section-heading-spacer" style="width: 280px">
         <div class="clearfix"></div>
         <p class="lead">Developed by Shyamasree Saha and Elena Chatzimichali under the supervision of Conrad Bessant (Queen Mary University of London) and David Matthews (University of Bristol). Funded by BBSRC (grants BB/M020118/1 and BB/K016075/1) and Queen Mary University of London.
-        <ol style="line-height: 1.7em">
-        <li id="ref1">Evans, V.C., <i>et al.</i>, De novo derivation of proteomes from transcriptomes for transcript and protein identification</i>. <a href="http://www.nature.com/nmeth/journal/v9/n12/full/nmeth.2227.html" target=_blank><strong>Nature Methods</strong>, 2012. 9(12): p.1207-1211</a>.</li>
-        <li id="ref2" style="padding-bottom: 20px">Fan, J., e<i>et al.</i>, Galaxy Integrated Omics: Web-based Standards-Compliant Workflows for Proteomics Informed by Transcriptomics. <a href="http://www.mcponline.org/content/14/11/3087.long" target=_blank><strong>Mol Cell Proteomics</strong>, 2015. 14(11): p.3087-93.</a></li>
+        <hr>
+
+	<ol style="line-height: 1.7em">
+	<li id="ref1">Saha, S., <i>et al.</i>, PITDB: a database of translated genomic elements</i>. <a href="https://doi.org/10.1093/nar/gkx906" target=_blank><strong>Nucleic Acids Research</strong>, 2017.</a>.</li>
+        <li id="ref2">Evans, V.C., <i>et al.</i>, De novo derivation of proteomes from transcriptomes for transcript and protein identification</i>. <a href="http://www.nature.com/nmeth/journal/v9/n12/full/nmeth.2227.html" target=_blank><strong>Nature Methods</strong>, 2012. 9(12): p.1207-1211</a>.</li>
+        <li id="ref3" style="padding-bottom: 20px">Fan, J., e<i>et al.</i>, Galaxy Integrated Omics: Web-based Standards-Compliant Workflows for Proteomics Informed by Transcriptomics. <a href="http://www.mcponline.org/content/14/11/3087.long" target=_blank><strong>Mol Cell Proteomics</strong>, 2015. 14(11): p.3087-93.</a></li>
         </ol>
         </p>
         <hr class="section-heading-spacer" style="padding-top: 20px">
