--- a/pit_app/templates/layout.html
+++ b/pit_app/templates/layout.html
@@ -22,6 +22,21 @@
     <link rel="stylesheet" href="/static/css/ext/sb-admin-2.css">
     
     <link rel="stylesheet" href="/static/css/pitdb.css">
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107488064-1"></script>
+
+    <script>
+
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag(){dataLayer.push(arguments)};
+
+    gtag('js', new Date());
+    gtag('config', 'UA-107488064-1');
+
+    </script>
+
 </head>
 
   <body>
