Revert "Removing data folders"
This reverts commit de708c1726a1134c9637facf92c588d73def0a42.

--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -90,7 +90,7 @@
                     {%elif tge.star==3%}<img src="/static/img/3star.png" style="width:90px;height:20px;">
                     {%elif tge.star==2%}<img src="/static/img/2star.png" style="width:90px;height:20px;">
                     {%elif tge.star==1%}<img src="/static/img/1star.png" style="width:90px;height:20px;">
-                    {%elif tge.star==0%}<img src="/static/img/0star.png" style="width:90px;height:20px;">
+                    {%else%}<img src="/static/img/0star.png" style="width:90px;height:20px;">
                     {%endif%}
                   </td>
                   <td>
